@@ -46,8 +46,8 @@ data:extend({
       height = HEIGHT,
       pipe_covers = nil,
       pipe_connections = {
-        { position = { 0, -1.6 }, type = "output", max_underground_distance = 1 },
-        { position = { 0, 1.6 }, type = "input", max_underground_distance = 1 },
+        { position = { 0, -1.6 }, type = "output" },
+        { position = { 0, 1.6 }, type = "input" },
       },
     },
     animations = {
