@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.3
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed that underground pipes could connect to ducts in certain situations (#13)
+    - Fixed that underground ducts would not connect if regular ducts were placed between them (#6)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2023-04-29
